--- a/src/styles/flight.module.css
+++ b/src/styles/flight.module.css
@@ -13,7 +13,6 @@
     border-bottom-right-radius: 40%;
 
     position: absolute;
-    z-index: -1;
     display: flex;
 }
 
@@ -25,6 +24,7 @@ h3{
     font-size: 22px;
     font-weight: 700;
     color: #ffffff;
+    letter-spacing: 0.5px;
 }
 
 
@@ -33,6 +33,7 @@ h3{
     height: 34vh;
     width: 65vw;
     border-radius: 20px;
+    z-index: 10;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .options_container{
@@ -95,8 +96,6 @@ h3{
 .from2{
     position: relative;
     left: -5px;
-
-    
 }
 
 .from_input{
