--- a/src/styles/hotels.module.css
+++ b/src/styles/hotels.module.css
@@ -1,21 +1,224 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 .hotel_page{
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 10px;
+    background-color: rgb(239, 243, 248);
+
+}
+
+.header{
+    height: 320px;
+    width: 100%;
+    background-color: #0066ff;
+    border-bottom-left-radius: 35%;
+    border-bottom-right-radius: 35%;
+
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+
+.header h3{
+    padding: 15px 0;
+    font-weight: 800;
+    letter-spacing: 1px;
 }
 
 .booking_section{
-    margin-top: 10vh;
-    height: 40vh;
+    margin-top: 17vh;
     width: 65vw;
     background-color: #ffffff;
-    font-size: 30px;
-    font-weight: 900;
     border-radius: 20px;
+    z-index: 10;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px;
+}
+
+.container div{
+    height: 8vh;
+    margin-top: 2vh;
+    cursor: pointer;
+    border: solid 2px #e1e7ee;
+    border-radius: 10px;
+}
+
+.container div:hover{
+    border: solid 2px dimgray;
+}
+
+.container span{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #717171;
+    background-color: #fff;
+    padding: 0 0.25rem;
+    font-size: 0.875rem;
+    font-weight: 600;
+    position: relative;
+    top: -12px;
+    left: 15px;
+}
+
+.placearea p{
+    padding: 0.315rem 11.65rem 1.4rem 1rem;
+    font-size: 1.2rem;
+    font-weight: 800;
+    color: #717171;
+    display: flex;
+    align-items: center;
+}
+
+.inDate p{
+    font-size: 1.12rem;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 740;
+    color: #222222;
+    padding: 0 1.2rem;
+}
+
+.inDate p span{
+    position: relative;
+    top: 0;
+    color: #ff6d38;
+    margin: 0 5px 0 -8px;
+}
+
+.inDate h6{
+    font-size: 0.75rem;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #717171;
+    margin-left: 18px;
+}
+
+.Outdate p{
+    font-size: 1.12rem;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 740;
+    color: #222222;
+    padding: 0 1.2rem;
+}
+
+.Outdate p span{
+    position: relative;
+    top: 0;
+    color: #ff6d38;
+    margin: 0 5px 0 -8px;
+}
+
+.Outdate h6{
+    font-size: 0.75rem;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #717171;
+    margin-left: 18px;
+}
+
+.guest_section p{
+    font-size: 1.12rem;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 740;
+    color: #222222;
+    padding: 0 1.2rem;
+    margin-top: 4px;
+}
+
+.guest_section p span{
+    position: relative;
+    top: 0;
+    color: #ff6d38;
+    margin: 0 0.315rem 0 6.65rem;
+}
+
+.search_button{
+    padding: 16px 50px;
+    background-color: #0066ff;
+    color: #ffffff; 
+    font-size: 1.375rem;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    border: none;
+    border-radius: 35px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    cursor: pointer;
+
+    position: relative;
+    top: 32px;
+}
+
+.search_button:hover{
+    background-color: #0551c2d9;
+}
+
+.hotel_store{
+    display: flex;
+    align-items: center;
+    width: 65vw;
+    background: linear-gradient(101deg, rgb(234, 245, 255) 0%, rgb(255, 255, 255) 97%);
+    border-radius: 15px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    padding: 2.3rem;
+    margin-top: 5rem;
+    position: relative;
+}
+
+.store_content{
+    margin-right: 55px;
+}
+
+.store_content h4{
+    font-size: 0.93rem;
+    font-weight: 550;
+    color: #717171;
+    margin: 4px 0;
+}
+
+.store_content h5{
+    font-size: 25px;
+    font-weight: 900;
+    color: #000;
+    margin-bottom: 5px;
+}
+
+.store_content p{
+    font-size: 1rem;
+    font-family: Rubik, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";;
+    font-weight: 400;
+    line-height: 1.375rem;
+    color: #000;
+}
+
+.store_img img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 14px;
+    cursor: pointer;
+}
+
+.store_img h5{
+    color: #fff;
+    font-size: 1rem;    
+    font-weight: 700;
+    font-family: Rubik, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";;
+    position: absolute;
+    bottom: 58px;
+    right: 620px;
+    cursor: pointer;
+
 }
