--- a/src/styles/bus.module.css
+++ b/src/styles/bus.module.css
@@ -1,21 +1,381 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 .bus_page{
     display: flex;
     align-items: center;
     flex-direction: column;
     gap: 10px;
+    background-color: rgb(239, 243, 248);
+}
+
+.header{
+    height: 320px;
+    width: 100%;
+    background-color: #0066ff;
+    border-bottom-left-radius: 35%;
+    border-bottom-right-radius: 35%;
+
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+
+.header h3{
+    padding: 15px 0;
+    font-weight: 800;
+    letter-spacing: 1px;
 }
 
 .booking_section{
-    margin-top: 10vh;
-    height: 40vh;
+    margin-top: 17vh;
+
     width: 65vw;
     background-color: #ffffff;
-    font-size: 30px;
-    font-weight: 900;
     border-radius: 20px;
+    z-index: 10;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
+
+}
+
+.input_section{
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 10px;
+    margin-top: 2.7rem;
 }
+  
+.input_section input{
+    width: 24.5vw;
+    padding: 1.5rem 1.3rem;
+    cursor: pointer;
+    border: solid 2px #e1e7ee;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: 850;
+}
+  
+.input_section input::placeholder{
+    color: #c2c2c2;
+}
+  
+.input_section input:hover{
+    border: solid 2px dimgray;
+}
+  
+.input_section div{
+    position: relative;
+}
+  
+.input_section div span{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #717171;
+    background-color: #fff;
+    padding: 0 0.25rem;
+    font-size: 0.9rem;
+    font-weight: 600;
+    position: absolute;
+    top: -8px;
+    left: 15px;
+}
+
+.departure input{
+    width: 12vw;
+    font-size: 1rem;
+    padding: 1.55rem 0.9rem;
+}
+
+.search_button{
+    display: flex;
+    justify-content: center;
+}
+  
+.search_button button{  
+    padding: 1rem 3rem;
+    background-color: #0066ff;
+    color: #ffffff; 
+    font-size: 1.32rem;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    border: none;
+    border-radius: 2.19rem;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    cursor: pointer;
+  
+    position: relative;
+    top: 1.9rem;
+}
+  
+.search_button button:hover{
+    background-color: #1d5ec1;
+}
+
+.whyUsSection{
+    width: 65vw;
+    margin-top: 6rem;
+    border-radius: 20px;
+    overflow: hidden;
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    background: linear-gradient(101deg, rgb(211, 233, 254) 0%, rgb(255, 255, 255) 97%);
+}
+
+.whyUsContent{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8rem;
+    padding: 4.5rem 0;
+}
+
+.textContent{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.textContent p{
+    font-size: 1.2rem;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 750;
+    color: #2f82ff;
+}
+
+.textContent h2{
+    font-size: 2.5rem;
+    font-weight: 800;
+    color:#515151;
+}
+
+.topfirst{
+    height: 85px;
+    width: 85px;
+    background-color: #ff6d38;
+    border-radius: 50%;
+    position: absolute;
+    top: -45px;
+    left: 20px;
+    z-index: 1;
+}
+
+.topsecond{
+    height: 85px;
+    width: 85px;
+    background-color: #3bbebe;
+    border-radius: 50%;
+    position: absolute;
+    top: -35px;
+    left: -12px;
+    z-index: 0;
+}
+
+.bottomfisrt{
+    height: 85px;
+    width: 85px;
+    background-color: #ff6d38;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -45px;
+    right: 20px;
+    z-index: 1;
+}
+
+.bottomsecond{
+    height: 85px;
+    width: 85px;
+    background-color: #3bbebe;
+    border-radius: 50%;
+    position: absolute;
+    bottom: -35px;
+    right   : -12px;
+    z-index: 0;
+}
+
+/* Government Bus Section */
+.governmentBusSection {
+  width: 65vw;
+}
+
+.governmentBusSectionHeader h3 {
+  font-size: 1.5rem;
+  font-weight: 900;
+  color: #17181c;
+  margin-bottom: 6px;
+}
+
+.governmentBusSectionHeader p {
+  font-size: 1rem;
+  font-weight: 550;
+  color: #393a44;
+}
+
+/* Card Container */
+.govtBusListContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 1.5rem;
+  }
+  
+  /* Card */
+.stateCard {
+    width: 295px;
+    height: 370px;
+    position: relative;
+    border-radius: 16px;
+    overflow: hidden;
+    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease;
+}
+  
+.stateCard:hover {
+    transform: translateY(-5px);
+}
+
+  /* Image wrapper for background + logo */
+.imageWrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+  
+.bgImage {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+  
+.logo {
+    position: absolute;
+    top: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+    height: 100px;
+    background: white;
+    border-radius: 50%;
+    padding: 6px;
+    object-fit: contain;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    z-index: 2;
+}
+
+  /* Text below image */
+.stateTextContent {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 16px;
+    background: linear-gradient(to top, rgba(0,0,0,0.7), transparent);
+    color: white;
+    z-index: 1;
+    text-align: center;
+}
+  
+.stateTextContent h3 {
+    margin: 0 0 4px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    font-weight: 600;
+}
+  
+.stateTextContent p {
+    font-size: 1.05rem;
+    font-weight: 650;
+    margin-bottom: 10px;
+}
+  
+.stateTextContent button {
+    background-color: transparent;
+    border: 1px solid #e27d76;
+    color: #dc635b;
+    padding: 8px 18px;
+    border-radius: 10px;
+    font-size: 1rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+  
+.stateTextContent button:hover {
+    background-color: white;
+    color: #e53935;
+}
+
+/* Bus route section */
+
+.busRouteSectoin{
+    width: 65vw;
+}
+
+.busRouteHeader h3{
+    font-size: 1.6rem;
+    font-weight: 820;
+    color: #17181c;
+}
+
+.busRouteHeader p{
+    font-size: 1rem;
+    font-weight: 400;
+    letter-spacing: 0;
+    line-height: 1.4;
+    margin-bottom: 1.2rem;
+}
+
+.busRouteListContainer{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  row-gap: 15px;
+  column-gap: 140px;
+}
+
+.busRouteCards{
+    display: flex;
+    align-items: center;
+    min-width: 550px;
+    border: solid 1px rgb(192, 192, 192);
+    border-radius: 10px;
+    padding: 1rem;
+    position: relative;
+}
+
+.busRouteCards img{
+    height: 60px;
+    width: 60px;
+    border-radius: 8px;
+}
+
+.busRouteCards button{
+  background-color: transparent;
+  font-size: 0.875rem;
+  font-weight: 600;
+  padding: .4rem 1rem;
+  border-radius: 1.875rem;
+  border: solid 1px #848794;
+  cursor: pointer;
+
+  position: absolute;
+  right: 1rem;
+}
+
+.busRouteCards button:hover{
+  background-color: #e7e7e7;
+}
+
+.routeTextContent{
+   position: relative;
+   display: flex;
+   align-items: center;
+   margin-left: 10px;
+}
+
+.routeTextContent h2{
+   font-size: 1.25rem;
+   font-weight: 700;
+   color: #17181c;
+}
+
