--- a/src/styles/holiday.module.css
+++ b/src/styles/holiday.module.css
@@ -6,17 +6,114 @@
     overflow-x: hidden;
 }
 
-.booking_section{
-    margin-top: 10vh;
-    height: 40vh;
+.header{
     width: 65vw;
-    background-color: #ffffff;
-    font-size: 30px;
-    font-weight: 900;
-    border-radius: 20px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-
     display: flex;
     align-items: center;
     justify-content: center;
+  
+    position: absolute;
+    top: 6.5rem;
+}
+  
+.header h2{
+    font-size: 1.33rem;
+    font-weight: 800;
+    color: #ffffff;
+    letter-spacing: 0.5px;
+}
+  
+
+.booking_section{
+    position: absolute;
+    top: 17.6vh;
+    width: 65vw;
+    padding: 2rem;
+    background-color: #ffffff;
+    border-radius: 20px;
+    z-index: 10;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.input_section{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 2rem;
+}
+  
+.input_section input{
+    width: 20vw;
+    padding: 1.4rem 1.3rem;
+    cursor: pointer;
+    border: solid 2px #e1e7ee;
+    border-radius: 10px;
+    font-size: 1.2rem;
+    font-weight: 850;
+}
+  
+.input_section input::placeholder{
+    color: #c2c2c2;
+}
+  
+.input_section input:hover{
+    border: solid 2px dimgray;
+}
+  
+.input_section div{
+    position: relative;
+}
+  
+.input_section div span{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #717171;
+    background-color: #fff;
+    padding: 0 0.25rem;
+    font-size: 0.9rem;
+    font-weight: 600;
+    position: absolute;
+    top: -8px;
+    left: 15px;
+}
+  
+.departure input{
+    width: 10vw;
+    font-size: 1rem;
+    padding: 1.45rem 0.9rem;
+}
+
+  
+.guest_section input{
+    width: 10vw;
+    font-size: 1rem;
+    padding: 1.45rem 0.9rem;
+}
+
+.guest_section input::placeholder{
+    color: #000;
+}
+
+.search_button{
+    display: flex;
+    justify-content: center;
+}
+  
+.search_button button{  
+    padding: 1rem 3rem;
+    background-color: #0066ff;
+    color: #ffffff; 
+    font-size: 1.32rem;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    border: none;
+    border-radius: 2.19rem;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    cursor: pointer;
+  
+    position: relative;
+    top: 3.7rem;
+}
+  
+.search_button button:hover{
+    background-color: #1d5ec1;
 }
